[RRTB-11] refactor AppStackTestˆ